The tables have now no longer shadows. It looks nice, but this is the table width is greater than 100%, thus ensuring horizontal scrollbar in some situations. (refs #2587)

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -242,9 +242,6 @@ table.z-datatable {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 table.z-datatable caption {
